--- a/src/public/css/common.css
+++ b/src/public/css/common.css
@@ -1,15 +1,27 @@
+* {
+    color: #8B7969;
+    font-family: "Inika", sans;
+    font-style: normal;
+    font-weight: 400;
+}
 .header {
     border-bottom: 1px solid #E0DFDE;
 }
 .header__inner {
+    align-items: center;
+    height: 100px;
     margin: 0 auto;
-    max-width: 1230px;
+    max-width: 1000px;
     padding: 20px 15px;
+    position: relative;
+    text-align: center;
 }
 .header__logo {
     color: #8B7969;
-    font-size: 24px;
-    text-align: center;
+    font-size: 32px;
+    left: 50%;
+    position: absolute;
     text-decoration: none;
-
+    transform: translate(-50%, -50%);
+    top: 50%;
 }
