--- a/src/public/css/confirm.css
+++ b/src/public/css/confirm.css
@@ -43,6 +43,10 @@ h2 {
 }
 
 .form__button {
+    align-items: center;
+    display: flex;
+    gap: 40px;
+    justify-content: center;
     margin-top: 50px;
     text-align: center;
 }
@@ -52,6 +56,5 @@ h2 {
     border: none;
     color: white;
     cursor: pointer;
-    margin-right: 30px;
     padding: 10px 40px;
 }
