--- a/src/public/css/admin.css
+++ b/src/public/css/admin.css
@@ -140,7 +140,6 @@ h2 {
     padding: 15px 30px;
 }
 
-
 .modal-checkbox {
     display: none;
 }
@@ -153,46 +152,88 @@ h2 {
 }
 
 .modal {
+    align-items: center;
+    background-color: rgb(0 0 0 / 0.6);
+    display: none;
+    height: 100%;
+    justify-content: center;
+    left: 0;
     position: fixed;
     top: 0;
-    left: 0;
-    z-index: 1;
-    display: none;
-    align-items: center;
-    justify-content: center;
     width: 100%;
-    height: 100%;
-    background-color: rgb(0 0 0 / 60%);
+    z-index: 1;
 }
 
 .close {
-    position: absolute;
-    top: 20px;
-    right: 20px;
-    font-size: 24px;
+    border: 1px solid #8B7969;
+    border-radius: 50%;
     cursor: pointer;
+    font-size: 24px;
+    height: 30px;
+    position: absolute;
+    right: 30px;
+    top: 30px;
     transform: translate(50%, -50%);
+    width: 30px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .modal-wrapper {
-    position: relative;
-    width: 80%;
-    max-width: 500px;
-    max-height: 70%;
-    padding: 20px;
-    margin: auto;
-    overflow: scroll;
     background-color: #FEFEFE;
     border-radius: 5px;
+    margin: auto;
+    max-height: 70%;
+    max-width: 500px;
+    overflow: scroll;
+    padding: 20px;
+    position: relative;
+    width: 80%;
 }
 
 .modal-content h1 {
-    margin: 0;
     font-size: 4rem;
     line-height: 1.2em;
     letter-spacing: -0.02em;
+    margin: 0;
 }
 
 .modal-checkbox:checked+.modal {
     display: flex;
+}
+
+.detail-form {
+    padding: 50px;
+}
+
+.detail-content__group {
+    display: grid;
+    grid-template-columns: 2fr 3fr;
+    margin-bottom: 10px;
+}
+
+span {
+    font-size: 14px;
+    font-weight: bold;
+    grid-column: 1/2;
+    margin-right: 10px;
+}
+
+input {
+    border: none;
+    font-size: 14px;
+    grid-column: 2/3;
+}
+
+.detail-content__button {
+    margin-top: 30px;
+    text-align: center;
+}
+
+.detail-content__button-submit {
+    background: #BA370D;
+    border: none;
+    color: #FFFFFF;
+    padding: 5px 10px;
 }
