--- a/src/public/css/index.css
+++ b/src/public/css/index.css
@@ -170,3 +170,8 @@ input[type="radio"]:checked {
     cursor: pointer;
     padding: 10px 40px;
 }
+
+.form__error {
+    color: #EB5756;
+    font-size: 12px;
+}
