--- a/src/public/css/admin.css
+++ b/src/public/css/admin.css
@@ -202,7 +202,6 @@ h2 {
 
 .modal {
     align-items: center;
-    background-color: rgb(0 0 0 / 0.6);
     display: none;
     height: 100%;
     justify-content: center;
@@ -231,15 +230,17 @@ h2 {
 
 .modal-wrapper {
     background-color: #FEFEFE;
-    border-radius: 5px;
+    border: 1px solid #8B7969;
+    box-shadow: 4px 4px 4px rgba(139, 121, 105, 0.25);
     margin: auto;
     max-height: 70%;
     max-width: 500px;
     overflow: scroll;
-    padding: 20px;
+    padding: 80px 50px;
     position: relative;
     width: 80%;
 }
+
 
 .modal-content h1 {
     font-size: 4rem;
