--- a/src/public/css/admin.css
+++ b/src/public/css/admin.css
@@ -235,12 +235,11 @@ h2 {
     margin: auto;
     max-height: 70%;
     max-width: 500px;
-    overflow: scroll;
+    overflow: auto;
     padding: 80px 50px;
     position: relative;
     width: 80%;
 }
-
 
 .modal-content h1 {
     font-size: 4rem;
@@ -258,23 +257,26 @@ h2 {
 }
 
 .detail-content__group {
-    display: grid;
-    grid-template-columns: 2fr 3fr;
+    display: flex;
     margin-bottom: 10px;
 }
 
 .detail-content__header {
     font-size: 14px;
     font-weight: bold;
-    grid-column: 1/2;
     margin-right: 10px;
+    width: 40%;
 }
 
 .detail-content__item {
     outline: none;
     border: none;
     font-size: 14px;
-    grid-column: 2/3;
+    width: 60%;
+}
+
+textarea {
+    resize: none;
 }
 
 .detail-content__button {
