--- a/src/public/css/thanks.css
+++ b/src/public/css/thanks.css
@@ -7,7 +7,7 @@
 
 main::before {
     content: "Thank you";
-    font-size: 200px;
+    font-size: 20vw;
     left: 50%;
     opacity: 0.05;
     pointer-events: none;
